--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,28 @@ a {
   margin-bottom: 0px;
 }
 
+.navbar-toggler {
+  padding: 0;
+  border-radius: 5px;
+  border: 3px solid #34495E;
+  position: relative;
+  z-index: 100000000000000000000000;
+  outline: none;
+}
+.navbar-toggler:focus {
+  box-shadow: 0 0 0 0.2rem #088a22 !important;
+}
+
+.navbar-toggler-icon {
+  padding: 0;
+  font-size: 26px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #088a22;
+}
+
 #banner_alt .banner_alt__menu .container ul li:nth-child(4) .banner_alt__content {
   position: absolute;
   top: 40px;
@@ -2704,7 +2726,7 @@ a {
 
 .color__main {
   position: fixed;
-  top: 100px;
+  top: 80px;
   left: 0px;
   display: flex;
   transition: all linear 0.3s;
