--- a/sass/section/_color-switcher.scss
+++ b/sass/section/_color-switcher.scss
@@ -150,6 +150,22 @@ $redgray: #4F6276;
 // --------------blue------------
 
 .blue{
+
+
+        // --------bottom to top---------
+
+        .bottom_to_top{
+            background-color: $blue;
+        }
+    
+    
+        // --------bottom to top---------
+    
+
+
+
+
+    
     #header .container .row .search .header__search_wrapper .header__info a i {
         color: $blue;
     }
@@ -446,6 +462,21 @@ $redgray: #4F6276;
 
 
 .red{
+
+    // --------bottom to top---------
+
+    .bottom_to_top{
+        background-color: $red;
+    }
+
+
+    // --------bottom to top---------
+
+
+
+
+
+
     #header .container .row .search .header__search_wrapper .header__info a i {
         color: $red;
     }
@@ -723,6 +754,19 @@ $redgray: #4F6276;
 // ----------------navy------------
 
 .navy{
+
+
+        // --------bottom to top---------
+
+        .bottom_to_top{
+            background-color: $navy;
+        }
+    
+    
+        // --------bottom to top---------
+    
+
+
     #header .container .row .search .header__search_wrapper .header__info a i {
         color: $navy;
     }
