--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,20 @@
 /* =============extra small========== */
 @media (max-width:575.98px){
 
+        /* // --------bottom to top--------- */
+
+        .bottom_to_top {
+            height: 35px;
+            width: 35px;
+            right: 25px;
+            bottom: 35px;
+            font-size: 20px;
+            z-index: 99999999999999999999;
+        }
+    
+        /* // --------bottom to top--------- */
+    
+
 
 /* ------------nav----------- */
 
@@ -1129,6 +1143,19 @@ li.dropdown_main:nth-child(6) > ul:nth-child(2){
 @media (min-width:576px) and (max-width:767.98px){
 
 
+        /* // --------bottom to top--------- */
+
+        .bottom_to_top {
+            height: 40px;
+            width: 40px;
+            right: 30px;
+            bottom: 30px;
+            font-size: 24px;
+            z-index: 99999999999999999999;
+        }
+    
+        /* // --------bottom to top--------- */
+    
 
 
 
@@ -2376,6 +2403,19 @@ li.dropdown_main:nth-child(6) > ul:nth-child(2){
 /* =================medium============== */
 
 @media (min-width:768px) and (max-width:991.98px){
+
+
+    /* // --------bottom to top--------- */
+
+    .bottom_to_top {
+        height: 40px;
+        width: 40px;
+        right: 30px;
+        bottom: 30px;
+        font-size: 24px;
+    }
+
+    /* // --------bottom to top--------- */
 
 
 
@@ -3698,6 +3738,25 @@ li.dropdown_main:nth-child(6) > ul:nth-child(2){
 
 
 @media (min-width:992px) and (max-width:1199.98px){
+
+
+    /* // --------bottom to top--------- */
+
+    .bottom_to_top {
+        height: 40px;
+        width: 40px;
+        right: 35px;
+        bottom: 35px;
+        font-size: 24px;
+    }
+
+    /* // --------bottom to top--------- */
+
+
+
+
+
+
 
 
 
